Randomize color button styling

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 	<div id=randomize-div onclick="randomize_colors()">
 
 	<div id=dice>
-		☏
+		❁
 	</div>
 
 		<svg
@@ -49,8 +49,9 @@
 		  <path
 		    id="circlePath"
 		    fill="var(--bg-color)"
-		    stroke="var(--layout-color)"
+		    stroke="var(--accent-color)"
 		    stroke-width="4"
+		    stroke-alignment="inner"
 		    d="
 		      M 10, 50
 		      a 40,40 0 1,1 80,0
